--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "Firefox ESR"
   ],
   "dependencies": {
-    "gulp-htmlmin": "^4.0.0"
+    "gulp-htmlmin": "^4.0.0",
+    "vegas": "^2.4.0"
   }
 }
